2003-11-02 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b204

	* Language: - Updated:
			Vietnamese (ja_JP) (Yay ! 2nd 100%), 
			Swedish (sv_SE) (Yay ! 3rd 100%),
			      Japanese (ja_JP)

	* Bugfix: Added missing <?php echo ?> around a var

	* Bugfix: Added nls Infos for en_US


2003-11-02 Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.1-cvs-b203

	* Changed recommended chmod for the setup/ directory to 700,
	  instead of 0, to prevent problems with some FTP clients
	  and servers.  This is already the recommended chmod in
	  the documentation.
	  
2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b202
	
	* In Config. Wizard, made the names of each skin a link to its
	  screen shot.
	
	* Added first-draft descriptions of all current skins.

2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b201

	* Fixed bug where ".", ".." and ".users" would display with 
	  "Attention adminstrator, remove these directories".

	* Added screen shots for all skins.

2003-10-30 Chris Schwerdt <muti@afterglo.ws> 1.4.1-cvs-b200

	* Added move-album command to gallery_remote2.php

	* Added move-album to gallery remote protocol documentation.

2003-10-29 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b199

	* Language: - Found some untranslated strings
		    - Synced languages
		    - Updated German (de_DE)

	* Changes: Tweaked Appereance at some places.

2003-10-29 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b198

	* Language: - Updated German (de_DE), Polish (pl_PL)
		    - Bugfixed Report.

2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b197

	* Don't display the voting instructions if there are no images.
	  (thanks to Jens).

	* Clean up of results display for polls.

2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b196

	* Fixed bug in voting.  Critique votes were being set to default 
	  values for images that weren't voted for.

2003-10-25 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b195

	* Language: - Synced Languages.